* 2014-05-12 - thorben.betten@open-xchange.com

 - Fix for bug 30843: Introduced properties for IMAP, POP3, and SMTP to specify the SSL cipher suites that will be enabled for SSL connections

* 2014-05-09 - thorben.betten@open-xchange.com

 - Fix for bug 32358: Drop any inline information on plain/text forward; such as "Content-Id" header
 - Fix for bug 32413: Added null guard
 - Fix for bug 32415/32417: Several null guard to deal with possible null return value
 - Fix for bug 32017: Keep subfolder information intact for "Public files" (15) folder

* 2014-05-08 - thorben.betten@open-xchange.com

 - Fix for bug 32358: Do not append references to inline image for modifiable message content

* 2014-05-08 - ioannis.chouklis@open-xchange.com

 - Fix for bug 32392: Do not throw an exception when the request body is null; the null value is interpreted as a remove operation

* 2014-05-07 - marc.arens@open-xchange.com

 - Fix for bug 32326: Send proper exception when non-member tries to send to GroupDispatcher
 
* 2014-05-07 - ioannis.chouklis@open-xchange.com

 - Fix for bug 32369: Use the correct HTTP method, i.e. POST and the correct response code from Xing, i.e. 201.
 - Fix for bug 32384: Throw an exception and stop the com.openexchange.push.udp bundle if there is a misconfiguration with the hostname 

* 2014-05-07 - lars.hoogestraat@open-xchange.com

 - Fix for bug 32351: Fix for bug 32351: Throwing error message if mail is expunged in the meantime

* 2014-05-07 - martin.schneider@open-xchange.com

 - Fix for bug 32263: Set transport password instead of IMAP password for account update

* 2014-05-07 - thorben.betten@open-xchange.com

 - Fix for bug 32339: Drop comments in advance
 - Fix for bug 32350: Deal with empty array on mailbox append operation
 - Fix for bug 32361: Introduced capability "xingjson" to signal presence of XING JSON bundle
 - Fix for bug 32285: More resource-reluctant approach when performing an IMAP FETCH command