@@ -148,6 +148,7 @@ public class AppointmentBugTestSuite extends TestSuite {
         tests.addTestSuite(Bug31779Test.class);
         tests.addTestSuite(Bug31963Test.class);
         tests.addTestSuite(Bug32278Test.class);
+        tests.addTestSuite(Bug32385Test.class);
 		return tests;
 	}
 }
