@@ -1,0 +1,160 @@
+/*
+ *
+ *    OPEN-XCHANGE legal information
+ *
+ *    All intellectual property rights in the Software are protected by
+ *    international copyright laws.
+ *
+ *
+ *    In some countries OX, OX Open-Xchange, open xchange and OXtender
+ *    as well as the corresponding Logos OX Open-Xchange and OX are registered
+ *    trademarks of the Open-Xchange, Inc. group of companies.
+ *    The use of the Logos is not covered by the GNU General Public License.
+ *    Instead, you are allowed to use these Logos according to the terms and
+ *    conditions of the Creative Commons License, Version 2.5, Attribution,
+ *    Non-commercial, ShareAlike, and the interpretation of the term
+ *    Non-commercial applicable to the aforementioned license is published
+ *    on the web site http://www.open-xchange.com/EN/legal/index.html.
+ *
+ *    Please make sure that third-party modules and libraries are used
+ *    according to their respective licenses.
+ *
+ *    Any modifications to this package must retain all copyright notices
+ *    of the original copyright holder(s) for the original code used.
+ *
+ *    After any such modifications, the original and derivative code shall remain
+ *    under the copyright of the copyright holder(s) and/or original author(s)per
+ *    the Attribution and Assignment Agreement that can be located at
+ *    http://www.open-xchange.com/EN/developer/. The contributing author shall be
+ *    given Attribution for the derivative code and a license granting use.
+ *
+ *     Copyright (C) 2004-2014 Open-Xchange, Inc.
+ *     Mail: info@open-xchange.com
+ *
+ *
+ *     This program is free software; you can redistribute it and/or modify it
+ *     under the terms of the GNU General Public License, Version 2 as published
+ *     by the Free Software Foundation.
+ *
+ *     This program is distributed in the hope that it will be useful, but
+ *     WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY
+ *     or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License
+ *     for more details.
+ *
+ *     You should have received a copy of the GNU General Public License along
+ *     with this program; if not, write to the Free Software Foundation, Inc., 59
+ *     Temple Place, Suite 330, Boston, MA 02111-1307 USA
+ *
+ */
+
+package com.openexchange.ajax.appointment.bugtests;
+
+import static com.openexchange.ajax.folder.Create.ocl;
+import static com.openexchange.groupware.calendar.TimeTools.D;
+import java.util.Date;
+import java.util.List;
+import java.util.TimeZone;
+import org.junit.Test;
+import com.openexchange.ajax.folder.actions.EnumAPI;
+import com.openexchange.ajax.framework.AJAXClient;
+import com.openexchange.ajax.framework.AJAXClient.User;
+import com.openexchange.ajax.framework.AbstractAJAXSession;
+import com.openexchange.ajax.framework.CommonInsertResponse;
+import com.openexchange.groupware.container.Appointment;
+import com.openexchange.groupware.container.FolderObject;
+import com.openexchange.groupware.container.Participant;
+import com.openexchange.groupware.container.UserParticipant;
+import com.openexchange.server.impl.OCLPermission;
+import com.openexchange.test.CalendarTestManager;
+
+/**
+ * {@link Bug32385Test}
+ *
+ * @author <a href="mailto:martin.herfurth@open-xchange.com">Martin Herfurth</a>
+ */
+public class Bug32385Test extends AbstractAJAXSession {
+
+    private CalendarTestManager ctm;
+
+    private Appointment appointment;
+
+    private AJAXClient client1;
+
+    private AJAXClient client2;
+
+    public Bug32385Test(String name) {
+        super(name);
+    }
+
+    @Override
+    public void setUp() throws Exception {
+        super.setUp();
+        ctm = new CalendarTestManager(getClient());
+        client1 = getClient();
+        client2 = new AJAXClient(User.User2);
+
+        FolderObject sharedFolder = new FolderObject();
+        sharedFolder.setObjectID(client2.getValues().getPrivateAppointmentFolder());
+        sharedFolder.setLastModified(new Date(Long.MAX_VALUE));
+        sharedFolder.setPermissionsAsArray(new OCLPermission[] {
+            ocl(
+                client1.getValues().getUserId(),
+                false,
+                false,
+                OCLPermission.ADMIN_PERMISSION,
+                OCLPermission.ADMIN_PERMISSION,
+                OCLPermission.ADMIN_PERMISSION,
+                OCLPermission.ADMIN_PERMISSION),
+            ocl(
+                client2.getValues().getUserId(),
+                false,
+                true,
+                OCLPermission.ADMIN_PERMISSION,
+                OCLPermission.ADMIN_PERMISSION,
+                OCLPermission.ADMIN_PERMISSION,
+                OCLPermission.ADMIN_PERMISSION) });
+
+        CommonInsertResponse response = client2.execute(new com.openexchange.ajax.folder.actions.UpdateRequest(EnumAPI.OX_OLD, sharedFolder));
+        response.fillObject(sharedFolder);
+
+        appointment = new Appointment();
+        appointment.setTitle("Bug 32385 Test");
+        appointment.setStartDate(D("01.05.2014 08:00"));
+        appointment.setEndDate(D("01.05.2014 09:00"));
+        UserParticipant user1 = new UserParticipant(client1.getValues().getUserId());
+        UserParticipant user2 = new UserParticipant(client2.getValues().getUserId());
+        appointment.setParticipants(new Participant[] { user1, user2 });
+        appointment.setUsers(new UserParticipant[] { user1, user2 });
+        appointment.setParentFolderID(client1.getValues().getPrivateAppointmentFolder());
+        appointment.setIgnoreConflicts(true);
+
+        ctm.insert(appointment);
+    }
+
+    @Test
+    public void testBug32385() throws Exception {
+        List<Appointment> newappointments = ctm.newappointments(
+            D("01.05.2014 00:00", TimeZone.getTimeZone("UTC")),
+            D("02.05.2014 00:00", TimeZone.getTimeZone("UTC")),
+            999,
+            new int[] { Appointment.OBJECT_ID, Appointment.FOLDER_ID });
+
+        int count = 0;
+        String inFolder = "";
+        for (Appointment app : newappointments) {
+            if (app.getObjectID() == appointment.getObjectID()) {
+                count++;
+                inFolder += app.getParentFolderID() + ",";
+            }
+        }
+
+        assertEquals("Wrong amount of appointments found (in Folder " + inFolder + ")", 1, count);
+    }
+
+    @Override
+    public void tearDown() throws Exception {
+        ctm.cleanUp();
+        super.tearDown();
+    }
+
+}
