@@ -1,3 +1,7 @@
+* 2014-05-12 - martin.herfurth@open-xchange.com
+
+ - Fix for bug 32385: New appointments request returns duplicate entries.
+
 * 2014-05-12 - thorben.betten@open-xchange.com
 
  - Fix for bug 30843: Introduced properties for IMAP, POP3, and SMTP to specify the SSL cipher suites that will be enabled for SSL connections
